--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.github.apl-devs:appintro:v4.2.0'
+    compile 'org.apache.commons:commons-io:1.3.2'
+    testCompile 'junit:junit:4.12'
 }
